--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                 </div>
 
                 <div class="caja1">
-                    <img src="./assecs/popaux.webp" alt="Mono en la oficina">
+                    <img src="./assecs/popaux.webp" alt="Unicornio haciendo helados">
                     <h2>Hacer mucha fuerza cuando defecamos podría llegar a matarnos</h2>
                     <p>Esta es una de esas noticias que no podemos dejar pasar por alto. Y si, pujar, hacer mucha fuerza
                         cuando defecamos podría llegar a matarnos…
