changes_index_css

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <h1>Noticias surrealistas</h1>
     </header>
     <main>
-        <section id="contenedor1">
-            <div class="fila1">
-                <div class="caja1">
+        <section id="container1">
+            <div class="row1">
+                <div class="box1">
                     <img src="./assecs/exorcismo.gif" alt="Personas haciendo exorcismo">
                     <h2>Exorcistas se reúnen para combatir a Satanás y evitar que se extienda por Internet</h2>
                     <h3>240 exorcistas de todo el mundo se han reunido en Roma para compartir experiencias sobre
@@ -58,7 +58,7 @@
                         piensa que el diablo puede estar metiendo la cola…Leer más</p>
                 </div>
 
-                <div class="caja1">
+                <div class="box1">
                     <img src="./assecs/mono.webp" alt="Mono en la oficina">
                     <h2>Arrestan a Mono En Pakistán</h2>
                     <h3>"Hace un año, en India, ocurrió el mismo procedimiento con una paloma por poder estar llevando a
@@ -92,10 +92,10 @@
         </section>
 
 
-        <section id="contenedor2">
-            <div class="fila2">
-                <div class="caja2">
-                    <div class="contenido">
+        <section id="container2">
+            <div class="row2">
+                <div class="box2">
+                    <div class="content">
                         <h2>Un grupo de niños brasileños apedrea a Papá Noel tras quedarse sin caramelos</h2>
                         <h3>"Comenzaron a correr detrás de nosotros insultándonos y tirándonos piedras y dulces"</h3>
                         <p>Un grupo de niños decidió apedrear a Papá Noel tras quedarse éste sin caramelos que repartir
@@ -150,15 +150,15 @@
                         </p>
                     </div>
                 </div>
-                <div class="imagen">
+                <div class="image">
                     <img src="./assecs/peques.webp" alt="Papá Noel agredido">
                 </div>
             </div>
         </section>
 
-        <section id="contenedor1">
-            <div class="fila1">
-                <div class="caja1">
+        <section id="container1">
+            <div class="row1">
+                <div class="box1">
                     <img src="./assecs/planta.webp" alt="Planta carnívora falsa">
                     <h2>Regó una planta por 2 años y descubre que era Falsa</h2>
                     <h3>Mujer riega diariamente su la planta de interior antes de descubrir que es falsa.</h3>
@@ -186,7 +186,7 @@
                         Los comentarios no se hicieron esperar. Obviamente de todo tipo…</p>
                 </div>
 
-                <div class="caja1">
+                <div class="box1">
                     <img src="./assecs/popaux.webp" alt="Unicornio haciendo helados">
                     <h2>Hacer mucha fuerza cuando defecamos podría llegar a matarnos</h2>
                     <p>Esta es una de esas noticias que no podemos dejar pasar por alto. Y si, pujar, hacer mucha fuerza
@@ -224,7 +224,7 @@
 </body>
 
 <footer>
-    <p class="container">&copy; 2023 Periódico surrealista - Todos los derechos reservados</p>
+    <p class="container_footer">&copy; 2023 Periódico surrealista - Todos los derechos reservados</p>
 </footer>
 
 
