--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main>
         <section id="container1">
             <div class="row1">
-                <div class="box1">
+                <article class="box1">
                     <img src="./assecs/exorcismo.gif" alt="Personas haciendo exorcismo">
                     <h2>Exorcistas se reúnen para combatir a Satanás y evitar que se extienda por Internet</h2>
                     <h3>240 exorcistas de todo el mundo se han reunido en Roma para compartir experiencias sobre
@@ -31,7 +31,7 @@
                         encarnación del mal, en pleno siglo XXI.
 
                         Según los organizadores, al igual que la sociedad progresa y se vuelve más moderna, el Diablo
-                        también se ha actualizado y ha encontrado nuevas formas de extender el mal a través de los
+                        también se ha actualizado y ha encontrado nuevas formas de exender el mal a través de los
                         medios de
                         comunicación, Internet, las redes sociales y los smartphones.
 
@@ -56,9 +56,9 @@
 
                         Es por ello que debes tener cuidado. Si tu página web no carga rápidamente, o se corta el Wifi,
                         piensa que el diablo puede estar metiendo la cola…Leer más</p>
-                </div>
+                </article>
 
-                <div class="box1">
+                <article class="box1">
                     <img src="./assecs/mono.webp" alt="Mono en la oficina">
                     <h2>Arrestan a Mono En Pakistán</h2>
                     <h3>"Hace un año, en India, ocurrió el mismo procedimiento con una paloma por poder estar llevando a
@@ -87,69 +87,68 @@
                         el
                         mismo procedimiento con una paloma por poder estar llevando a cabo, supuestamente, una misión de
                         espionaje para Pakistán</p>
-                </div>
+                </article>
             </div>
         </section>
 
 
         <section id="container2">
             <div class="row2">
-                <div class="box2">
-                    <div class="content">
-                        <h2>Un grupo de niños brasileños apedrea a Papá Noel tras quedarse sin caramelos</h2>
-                        <h3>"Comenzaron a correr detrás de nosotros insultándonos y tirándonos piedras y dulces"</h3>
-                        <p>Un grupo de niños decidió apedrear a Papá Noel tras quedarse éste sin caramelos que repartir
-                            durante
-                            un desfile navideño en el municipio de Itatiba, en el estado brasileño de Sao Paulo,
-                            informaron
-                            este
-                            miércoles medios locales.
+                <article class="box2">
+                    <h2>Un grupo de niños brasileños apedrea a Papá Noel tras quedarse sin caramelos</h2>
+                    <h3>"Comenzaron a correr detrás de nosotros insultándonos y tirándonos piedras y dulces"</h3>
+                    <p>Un grupo de niños decidió apedrear a Papá Noel tras quedarse éste sin caramelos que repartir
+                        durante
+                        un desfile navideño en el municipio de Itatiba, en el estado brasileño de Sao Paulo,
+                        informaron
+                        este
+                        miércoles medios locales.
 
-                            El Papá Noel recorría las calles de la localidad, a la altura del barrio de Porto Seguro, y
-                            en
-                            un
-                            momento dado se le acabaron los caramelos, lo que indignó a siete niños, de entre 9 y 12
-                            años,
-                            que
-                            no dudaron en reaccionar lanzándole piedras.
+                        El Papá Noel recorría las calles de la localidad, a la altura del barrio de Porto Seguro, y
+                        en
+                        un
+                        momento dado se le acabaron los caramelos, lo que indignó a siete niños, de entre 9 y 12
+                        años,
+                        que
+                        no dudaron en reaccionar lanzándole piedras.
 
-                            "Comenzaron a correr detrás de nosotros insultándonos y tirándonos piedras y dulces", relató
-                            al
-                            portal UOL uno de los ayudantes que acompañaba a Papá Noel. Ninguno de los voluntarios que
-                            participaba en el desfile, incluido Papá Noel, resultó herido. De acuerdo con el citado
-                            medio,
-                            el
-                            incidente ya se había repetido otros años en el mismo barrio.
+                        "Comenzaron a correr detrás de nosotros insultándonos y tirándonos piedras y dulces", relató
+                        al
+                        portal UOL uno de los ayudantes que acompañaba a Papá Noel. Ninguno de los voluntarios que
+                        participaba en el desfile, incluido Papá Noel, resultó herido. De acuerdo con el citado
+                        medio,
+                        el
+                        incidente ya se había repetido otros años en el mismo barrio.
 
-                            El tradicional desfile lo protagoniza el conocido como Papá Noel Luizao, dueño de una
-                            funeraria
-                            que
-                            desde hace años, por estas fechas, reparte caramelos entre los más pequeños del municipio
-                            paulista.
+                        El tradicional desfile lo protagoniza el conocido como Papá Noel Luizao, dueño de una
+                        funeraria
+                        que
+                        desde hace años, por estas fechas, reparte caramelos entre los más pequeños del municipio
+                        paulista.
 
-                            El Papá Noel en cuestión no quiso hablar con los medios de comunicación pero en su perfil de
-                            redes
-                            sociales se lamentó de lo sucedido y afirmó que hasta el día 25 va a "intentar pasar por la
-                            avenida
-                            principal" para seguir repartiendo caramelos.
+                        El Papá Noel en cuestión no quiso hablar con los medios de comunicación pero en su perfil de
+                        redes
+                        sociales se lamentó de lo sucedido y afirmó que hasta el día 25 va a "intentar pasar por la
+                        avenida
+                        principal" para seguir repartiendo caramelos.
 
-                            "Desgraciadamente en aquel momento los caramelos se acabaron", manifestó, al tiempo que
-                            pidió la
-                            colaboración de los vecinos para que ayuden a recolectar dulces y los donen para
-                            repartirlos.
-                            "Vamos
-                            con fe a continuar con esta tradición que alegra tanto a todos en Itatiba", añadió.
+                        "Desgraciadamente en aquel momento los caramelos se acabaron", manifestó, al tiempo que
+                        pidió la
+                        colaboración de los vecinos para que ayuden a recolectar dulces y los donen para
+                        repartirlos.
+                        "Vamos
+                        con fe a continuar con esta tradición que alegra tanto a todos en Itatiba", añadió.
 
-                            Por su parte, la Alcaldía de Itatiba dijo en una nota no tener conocimiento de la agresión a
-                            Papá
-                            Noel Luizao y su equipo, y se limitó a decir que la localidad cuenta por estas fechas con
-                            Papás
-                            Noel
-                            voluntarios que "recorren los barrios de forma independiente, sin vínculo con la
-                            Administración."
-                        </p>
-                    </div>
-                </div>
+                        Por su parte, la Alcaldía de Itatiba dijo en una nota no tener conocimiento de la agresión a
+                        Papá
+                        Noel Luizao y su equipo, y se limitó a decir que la localidad cuenta por estas fechas con
+                        Papás
+                        Noel
+                        voluntarios que "recorren los barrios de forma independiente, sin vínculo con la
+                        Administración."
+                    </p>
+                </article>
+
                 <div class="image">
                     <img src="./assecs/peques.webp" alt="Papá Noel agredido">
                 </div>
